feat(api): add EU grid mix and more
